--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,3 +30,16 @@ jobs:
         with:
           commit_message: "Auto Update"
           file_pattern: comads.txt
+  
+  cleanup:
+    needs: [merge_lists]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Delete workflow runs
+        uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 15
+          keep_minimum_runs: 7
+
