--- a/.github/workflows/update-httpdns.yml
+++ b/.github/workflows/update-httpdns.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  merge_lists:
+  generate_lists:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,9 +19,6 @@ jobs:
           python-version: '3.x'
           check-latest: true
 
-      #- name: Install requests
-        #run: pip install requests
-
       - name: Run merge script
         run: python httpdns.py
 
@@ -30,15 +27,3 @@ jobs:
         with:
           commit_message: "Auto Update"
           file_pattern: httpdns-cn.txt
-  
-  cleanup:
-    needs: [merge_lists]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
-        with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          keep_minimum_runs: 7
-
